--- a/resources/assets/sass/_section.scss
+++ b/resources/assets/sass/_section.scss
@@ -579,7 +579,7 @@
         }
 
         p {
-            font-size: 11px;
+            font-size: 13px;
             margin-bottom: 14px;
         }
     }
